--- a/public/schedule/week-05/index.html
+++ b/public/schedule/week-05/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 <td>Wednesday</td>
 <td><a href="https://sta210-fa20.netlify.app/slides/10-mlr-predictor-types.html">MLR: Types of predictors</a></td>
 <td><a href="https://warpwire.duke.edu/w/d3UEAA/">MLR: Types of predictors</a></td>
-<td>AE 10</td>
+<td><a href="https://sta210-fa20.netlify.app/appex/ae-10-diamonds.html">AE 10: Price of diamonds</a></td>
 </tr>
 </tbody>
 </table>
