--- a/public/schedule/week-05/index.html
+++ b/public/schedule/week-05/index.html
@@ -403,7 +403,7 @@ font-size: 18px;
 <td><strong>due Wed, Sep 23</strong></td>
 </tr>
 <tr>
-<td>Lab 04</td>
+<td><a href="https://sta210-fa20.netlify.app/labs/lab-04-candy.html">Lab 04</a></td>
 <td><strong>due Wed, Sep 23</strong></td>
 </tr>
 </tbody>
