--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -861,16 +861,14 @@ table tbody tr:nth-child(odd){
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
-            <td align="right" style="width:25%;text-align:right">Thu, Sep 18</td>
-            <td style="width:40%;text-align:left">Lab 05</td>
+            <td align="right" style="width:25%;text-align:right">Thu, Sep 17</td>
+            <td style="width:40%;text-align:left">Lab 04: Candy!</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/lab-04-candy.html">
+                    <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
