--- a/public/labs/lab-04-candy.html
+++ b/public/labs/lab-04-candy.html
@@ -647,7 +647,7 @@ text-decoration: underline;
 </ol>
 <ul>
 <li>What is the intercept? The intercept is the expected win percentage for what type of candy?</li>
-<li>What does the coefficient for the interaction between <code>suagrpercent</code> and <code>winpercent</code> tell us?</li>
+<li>What does the coefficient for the interaction between <code>suagrpercent</code> and <code>chocolate</code> tell us?</li>
 <li>Describe the effect of <code>sugarpercent</code> on <code>winpercent</code> for candy that is chocolate.</li>
 </ul>
 <ol style="list-style-type: decimal">
