--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -265,7 +265,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-06/">Week 06</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-06/">Week 06: Transform &#43; compare</a>
         </div>
     </div>
     
@@ -885,11 +885,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 06</td>
             <td align="right" style="width:25%;text-align:right">Mon, Sep 21</td>
-            <td style="width:40%;text-align:left">MLR: Transformations</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Variable Transformations</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/11-transformations.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
@@ -910,7 +909,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 23</td>
-            <td style="width:40%;text-align:left">MLR: Comparing models</td>
+            <td style="width:40%;text-align:left">Comparing models</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -983,6 +982,56 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 30</td>
+            <td style="width:40%;text-align:left"></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">MLR: Conditions</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
             <td style="width:40%;text-align:left">MLR: Model diagnostics</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
