--- a/public/schedule/week-15/index.html
+++ b/public/schedule/week-15/index.html
@@ -269,7 +269,7 @@ table tbody tr:nth-child(odd){
     </div>
     
     <div class="section">
-        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-06/">Week 06: Transform &#43; compare</a>
+        <div class="sectionTitle"><a class = "sectionTitle " href="/schedule/week-06/">Week 06: Transformations &#43; compare models</a>
         </div>
     </div>
     
