--- a/public/schedule/week-06/index.html
+++ b/public/schedule/week-06/index.html
@@ -385,7 +385,7 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td><strong>TBD</strong></td>
+<td><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0234232#abstract0">Influence of perceived threat of Covid-19 and HEXACO personality traits on toilet paper stockpiling</a></td>
 <td>Optional</td>
 </tr>
 </tbody>
