--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -1178,7 +1178,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 09</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 12</td>
-            <td style="width:40%;text-align:left">Logistic regression</td>
+            <td style="width:40%;text-align:left">Statistics experience</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1203,7 +1203,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 14</td>
-            <td style="width:40%;text-align:left">Logistic: predictions + conditions</td>
+            <td style="width:40%;text-align:left">Logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1251,7 +1251,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 10</td>
             <td align="right" style="width:25%;text-align:right">Mon, Oct 19</td>
-            <td style="width:40%;text-align:left">Logistic: inference</td>
+            <td style="width:40%;text-align:left">Logistic: predictions + conditions</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1276,7 +1276,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 21</td>
-            <td style="width:40%;text-align:left">Multinomial logistic regression</td>
+            <td style="width:40%;text-align:left">Logistic regression: inference</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1348,33 +1348,8 @@ table tbody tr:nth-child(odd){
         </tr>
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
-            <td align="right" style="width:25%;text-align:right">UNIT 03</td>
-            <td style="width:40%;text-align:left">LOOKING AHEAD</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-edit fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
-            </td>
-        </tr>
-        <tr>
-                                 <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Oct 28</td>
-            <td style="width:40%;text-align:left">Log-linear models</td>
+            <td style="width:40%;text-align:left">Multinomial logistic regression</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1422,9 +1397,34 @@ table tbody tr:nth-child(odd){
             </td>
         </tr>
         <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">UNIT 03</td>
+            <td style="width:40%;text-align:left">LOOKING AHEAD</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 12</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 02</td>
-            <td style="width:40%;text-align:left">Weighted least squares</td>
+            <td style="width:40%;text-align:left">Log-linear models</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
@@ -1497,7 +1497,7 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 13</td>
             <td align="right" style="width:25%;text-align:right">Mon, Nov 09</td>
-            <td style="width:40%;text-align:left">Missing data</td>
+            <td style="width:40%;text-align:left">Dealing with missing data</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
