--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -918,6 +918,31 @@ table tbody tr:nth-child(odd){
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
             </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-check-square fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right"></td>
+            <td style="width:40%;text-align:left">HW 04 assigned</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
             <td align="center" style="width:10%;text-aign:center"><a href="/hw/hw-04.html">
                     <i class="fas fa-edit fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
@@ -982,31 +1007,6 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Wed, Sep 30</td>
-            <td style="width:40%;text-align:left"></td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-edit fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-check-square fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
-            </td>
-        </tr>
-        <tr>
-                                 <td align="left" style="width:15%;text-align:right"></td>
-            <td align="right" style="width:25%;text-align:right"></td>
             <td style="width:40%;text-align:left">MLR: Conditions</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -1057,7 +1057,30 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Oct 01</td>
-            <td style="width:40%;text-align:left">Lab 07</td>
+            <td style="width:40%;text-align:left">No lab: Take Quiz 01</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="far fa-file-code fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-edit fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/quiz/quiz-02.html">
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
+            </td>
+        </tr>
+        <tr>
+                                 <td align="left" style="width:15%;text-align:right"></td>
+            <td align="right" style="width:25%;text-align:right">Fri, Oct 02</td>
+            <td style="width:40%;text-align:left">Quiz 02 due</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
